--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_NAME=web-messenger
 
 SECRET_KEY=dev-secret-key
 JWT_ALGORITHM=HS256
+ACCESS_TOKEN_MINUTES=30
+REFRESH_TOKEN_MINUTES=10080
 
 POSTGRES_DB=messenger
 POSTGRES_USER=messenger
