feat(frontend): add auth flow routing and http client

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ MINIO_BUCKET=attachments
 
 MAILHOG_HOST=mailhog
 MAILHOG_PORT=1025
+
+VITE_API_URL=http://localhost:8000/api
+VITE_WS_URL=ws://localhost:8000/ws
