feat(chats): add REST models, endpoints, and migration

--- a/.env.example
+++ b/.env.example
@@ -9,14 +9,20 @@ REFRESH_TOKEN_MINUTES=10080
 POSTGRES_DB=messenger
 POSTGRES_USER=messenger
 POSTGRES_PASSWORD=messenger
+POSTGRES_PORT=5433
 DATABASE_URL=postgresql+psycopg2://messenger:messenger@db:5432/messenger
 
 REDIS_URL=redis://redis:6379/0
+REDIS_PORT=6380
 
 MINIO_ENDPOINT=http://minio:9000
 MINIO_ACCESS_KEY=minio
 MINIO_SECRET_KEY=miniosecret
 MINIO_BUCKET=attachments
+MINIO_PORT=9002
+MINIO_CONSOLE_PORT=9003
 
 MAILHOG_HOST=mailhog
 MAILHOG_PORT=1025
+MAILHOG_UI_PORT=8026
+MAILHOG_SMTP_PORT=1026
