--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./backend:/app
     ports:
-      - "8000:8000"
+      - "${BACKEND_PORT:-8000}:8000"
     depends_on:
       db:
         condition: service_healthy
@@ -50,7 +50,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER:-messenger}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-messenger}
     ports:
-      - "${POSTGRES_PORT:-5433}:5432"
+      - "${POSTGRES_PORT:-5440}:5432"
     volumes:
       - pg_data:/var/lib/postgresql/data
     healthcheck:
@@ -63,7 +63,7 @@ services:
     image: redis:7
     restart: unless-stopped
     ports:
-      - "${REDIS_PORT:-6380}:6379"
+      - "${REDIS_PORT:-6381}:6379"
 
   minio:
     image: minio/minio:RELEASE.2024-04-18T19-09-19Z
@@ -72,8 +72,8 @@ services:
       MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY:-minio}
       MINIO_SECRET_KEY: ${MINIO_SECRET_KEY:-miniosecret}
     ports:
-      - "${MINIO_PORT:-9002}:9000"
-      - "${MINIO_CONSOLE_PORT:-9003}:9001"
+      - "${MINIO_PORT:-9100}:9000"
+      - "${MINIO_CONSOLE_PORT:-9101}:9001"
     volumes:
       - minio_data:/data
 
