feat(frontend): add websocket live messaging and typing

--- a/.env.example
+++ b/.env.example
@@ -27,5 +27,7 @@ MAILHOG_PORT=1025
 MAILHOG_UI_PORT=8026
 MAILHOG_SMTP_PORT=1026
 
+BACKEND_PORT=8000
+
 VITE_API_URL=http://localhost:8000/api
 VITE_WS_URL=ws://localhost:8000/ws
