feat(attachments): add presign upload and email notifications

--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,13 @@ MINIO_SECRET_KEY=miniosecret
 MINIO_BUCKET=attachments
 MINIO_PORT=9100
 MINIO_CONSOLE_PORT=9101
+PRESIGN_EXPIRE_SECONDS=600
 
 MAILHOG_HOST=mailhog
 MAILHOG_PORT=1025
 MAILHOG_UI_PORT=8026
 MAILHOG_SMTP_PORT=1026
+MAIL_FROM=noreply@example.com
 
 BACKEND_PORT=8000
 
