--- a/.env.example
+++ b/.env.example
@@ -31,5 +31,5 @@ MAIL_FROM=noreply@example.com
 
 BACKEND_PORT=8000
 
-VITE_API_URL=http://localhost:${BACKEND_PORT}/api
-VITE_WS_URL=ws://localhost:${BACKEND_PORT}/ws
+VITE_API_URL=http://localhost:8000/api
+VITE_WS_URL=ws://localhost:8000/ws
