backend: offload WS DB ops, fix attachments/email, bump mailhog ports

--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ MAILHOG_UI_PORT=8126
 MAILHOG_SMTP_PORT=1826
 MAIL_FROM=noreply@example.com
 
-BACKEND_PORT=8000
+BACKEND_PORT=8001
 
-VITE_API_URL=http://localhost:8000/api
-VITE_WS_URL=ws://localhost:8000/ws
+VITE_API_URL=http://localhost:${BACKEND_PORT}/api
+VITE_WS_URL=ws://localhost:${BACKEND_PORT}/ws
