chore: align env example with new dev ports

--- a/.env.example
+++ b/.env.example
@@ -9,18 +9,18 @@ REFRESH_TOKEN_MINUTES=10080
 POSTGRES_DB=messenger
 POSTGRES_USER=messenger
 POSTGRES_PASSWORD=messenger
-POSTGRES_PORT=5440
+POSTGRES_PORT=5546
 DATABASE_URL=postgresql+psycopg2://messenger:messenger@db:5432/messenger
 
 REDIS_URL=redis://redis:6379/0
-REDIS_PORT=6381
+REDIS_PORT=6390
 
 MINIO_ENDPOINT=http://minio:9000
 MINIO_ACCESS_KEY=minio
 MINIO_SECRET_KEY=miniosecret
 MINIO_BUCKET=attachments
-MINIO_PORT=9100
-MINIO_CONSOLE_PORT=9101
+MINIO_PORT=9114
+MINIO_CONSOLE_PORT=9115
 PRESIGN_EXPIRE_SECONDS=600
 
 MAILHOG_HOST=mailhog
@@ -29,7 +29,7 @@ MAILHOG_UI_PORT=8126
 MAILHOG_SMTP_PORT=1826
 MAIL_FROM=noreply@example.com
 
-BACKEND_PORT=8000
+BACKEND_PORT=8005
 
-VITE_API_URL=http://localhost:8000/api
-VITE_WS_URL=ws://localhost:8000/ws
+VITE_API_URL=http://localhost:${BACKEND_PORT}/api
+VITE_WS_URL=ws://localhost:${BACKEND_PORT}/ws
